--- a/Component/new-year-toys-game/src/game.html
+++ b/Component/new-year-toys-game/src/game.html
@@ -42,6 +42,10 @@
             <div class="time">Time: <span id="time">25</span>s</div>
         </div>
         <div id="game-area"></div>
+        <div id="leaderboard" class="leaderboard">
+            <h2>Top Scores</h2>
+            <div id="leaderboard-list"></div>
+        </div>
     </div>
     <script src="js/game.js"></script>
     <script src="../../../main.js"></script>
